[styles][templates] fix too long email on small screens

--- a/source/styles/generic/_text.scss
+++ b/source/styles/generic/_text.scss
@@ -4,4 +4,11 @@
 // =============================================================================
 
 .#{$ekzo-h-ns}text--tracked07 { letter-spacing: .07em; }
+
 .#{$ekzo-h-ns}text--tracked25 { letter-spacing: .25em; }
+
+.#{$ekzo-h-ns}text--tracked25\@tablet {
+  @include ekzo-breakpoint(tablet) {
+    letter-spacing: .25em;
+  }
+}
